# linux-support

./: .gitignore  .gitmodules  COPYRIGHT  LICENSE  README.md  rust-toolchain  rust-toolchain.toml
workspace/: Cargo.toml  cargo-vendor-versioned-dirs  commit-and-push-submodules-dependent-on-linux-support
workspace/.cargo/: .gitignore  config  config.toml
workspace/.cargo/vendored-sources/ansi_term-0.12.1/: Cargo.toml
workspace/.cargo/vendored-sources/anyhow-1.0.40/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/const-cstr-fork-0.2.2/: Cargo.toml
workspace/.cargo/vendored-sources/const_fn_assert-0.1.2/: .cargo-checksum.json  README.md
workspace/.cargo/vendored-sources/libc-0.2.104/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/libc-extra-0.3.2/: Cargo.toml  LICENSE  README.md
workspace/.cargo/vendored-sources/likely-0.1.0/: COPYRIGHT  Cargo.toml  LICENSE  README.md
workspace/.cargo/vendored-sources/once_cell-1.13.0/: Cargo.toml
workspace/.cargo/vendored-sources/raw-cpuid-8.1.2/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/raw-cpuid-9.0.0/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/raw-cpuid-9.1.1/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/serde-big-array-0.3.1/: .cargo-checksum.json
workspace/.cargo/vendored-sources/serde-big-array-0.3.3/: .cargo-checksum.json
workspace/.cargo/vendored-sources/streaming-iterator-0.1.5/: Cargo.toml
workspace/.cargo/vendored-sources/streaming-iterator-0.1.6/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/uriparse-0.6.3/: .cargo-checksum.json  Cargo.toml  README.md  RELEASES.md
workspace/.cargo/vendored-sources/uriparse-0.6.4/: .cargo-checksum.json  Cargo.toml  LICENSE  RELEASES.md
workspace/linux-io-uring/: Cargo.toml  build.rs
workspace/linux-io-uring-main/: Cargo.toml
workspace/linux-io-uring-main/src/: Configuration.rs  configure_and_execute.rs  main.rs
workspace/linux-io-uring-main/src/application_configuration/: AcceptServiceConfiguration.rs  Configuration.rs  ConfigurationError.rs  mod.rs
workspace/linux-io-uring-main/src/command_line/: ConfigurationName.rs  ConfigurationValue.rs  RunAsDaemonName.rs  mod.rs  parse_command_line.rs  parse_matches.rs
workspace/linux-io-uring-main/src/memory_allocator_settings/: OneMegabyte.rs  ThreadLocalAllocator.rs  mod.rs  per_thread_state.rs
workspace/linux-io-uring-main/src/service_protocol_identifiers/: SipOverTls.rs  mod.rs
workspace/linux-io-uring-main/src/simple_network_time_protocol/: mod.rs
workspace/linux-io-uring/src/: AcceptConnectionsCoroutine.rs  CoroutineManagers.rs  CoroutineParallelOperationSlots.rs  CoroutineUserData.rs  DequeuedMessageProcessingError.rs  DispatchIoUringError.rs  IoUringSettings.rs  IoUringSetupError.rs  MessageHandlerArguments.rs  Operation.rs  OriginalRequestCancelationKind.rs  TODO  ThreadLocalAllocatorSettings.rs  ThreadLocalAllocatorSettingsDropGuard.rs  ThreadLocalCoroutineManagers.rs  ThreadLoop.rs  ThreadLoopInitializationError.rs  ThreadLoopInitiation.rs  lib.rs  main.rs
workspace/linux-io-uring/src/coroutines/: CoroutineDispatch.rs  CoroutineRequiresReEntry.rs  ServerLoopCoroutineManager.rs  SimpleIoUringResumeArguments.rs  SimpleIoUringYielder.rs  SimpleIoUringYields.rs  UnusedComplete.rs  UnusedCoroutineInformation.rs  mod.rs
workspace/linux-io-uring/src/dogstatsd/: DogStatsDMessageSubscribers.rs  DogStatsDPublisher.rs  DogStatsDStaticInitialization.rs  mod.rs
workspace/linux-io-uring/src/main_support/: AcceptServiceConfiguration.rs  AcceptStackSize.rs  Configuration.rs  CoroutineHeapSize.rs  GTACSA.rs  mod.rs  (+3 more)
workspace/linux-support/: Cargo.toml  TODO.md
workspace/linux-support-clone/: Cargo.toml  README.md
workspace/linux-support-clone/src/: ChildProcessFunction.rs  ChildStackAlignment.rs  ChildTerminationSignal.rs  CloneError.rs  CloneFlags.rs  CouldNotStartChildProcessError.rs  HiddenChildProcessArguments.rs  WaitByte.rs  allocate_child_process_stack.rs  anonymous_pipe_between_parent_and_child.rs  clone.rs  clone_child_process_in_new_namespace.rs  clone_wrapper.rs  deallocate_child_process_stack.rs  kill_wrapper.rs  lib.rs  mkdir.rs  mkdir_wrapper.rs  pivot_root.rs  pivot_root_wrapper.rs  replace_inheritated_mounts.rs  top_of_child_stack_pointer.rs  wait_until_parent_process_has_written_uid_and_gid_maps.rs  write_uid_and_gid_maps_and_inform_child_process.rs
workspace/linux-support-common/: Cargo.toml  README.md
workspace/linux-support-common/src/: TODO.rs  WarningsToSuppress.rs  current_numa_node_and_hyper_thread.rs  get_program_name.rs  lib.rs  move_to_front_of_vec.rs
workspace/linux-support-process/: Cargo.toml  README.md
workspace/linux-support-process/src/: DetailedProcessConfiguration.rs  DetailedProcessConfigurationError.rs  MasterLoop.rs  MasterProcess.rs  Process.rs  ProcessConfiguration.rs  ProcessConfigurationExecutionError.rs  lib.rs
workspace/linux-support/src/: BlockDevice.rs  ClockTicks.rs  ENOTSUPP.rs  LoadNonAtomically.rs  ObjectName.rs  ObjectName128.rs  ObjectName16.rs  ObjectName256.rs  ObjectName32.rs  ObjectNameFromBytesError.rs  StaticInitializedOnce.rs  VariablySized.rs  WarningsToSuppress.rs  __BindgenBitFieldUnit.rs  __IncompleteArrayField.rs  current_numa_node_and_hyper_thread.rs  get_program_name.rs  lib.rs  object_name.rs
workspace/message-dispatch-datadog/: Cargo.toml
workspace/message-dispatch-datadog/src/: DequeuedMessageProcessingError.rs  lib.rs
workspace/socket-access-control/: Cargo.toml
workspace/socket-access-control/src/: AccessControl.rs  AccessControlledSocketData.rs  InternetProtocolVersion4AccessControl.rs  InternetProtocolVersion6AccessControl.rs  RemotePeerAddressBasedAccessControl.rs  UnixDomainSocketAccessControl.rs  lib.rs
workspace/swiss-army-knife/: Cargo.toml  README.md
workspace/swiss-army-knife/src/: ConstArrayVec.rs  StaticInitializedOnce.rs  VariablySized.rs  ft.rs  lib.rs  move_to_front_of_vec.rs  unexpected_error.rs  unexpected_result.rs  unreachable_code.rs  unreachable_code_const.rs
(+4568 files in other folders)
