# This file is part of linux-process. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-process/master/COPYRIGHT. No part of linux-process, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2020 The developers of linux-process. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-process/master/COPYRIGHT.


[workspace]
members = [
    "linux-io-uring",
    "linux-support",
    "linux-support-clone",
]