# This file is part of linux-support. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT. No part of linux-support, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2020 The developers of linux-support. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT.


[package]
name = "linux-io-uring-main"
description = "Comprehensive Linux support for io-uring (sample main program)"
keywords = []
categories = []
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael@dialogx.com>"]
homepage = "https://github.com/lemonrock/linux-support"
repository = "https://github.com/lemonrock/linux-support.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
edition = '2018'
version = "0.0.2"

[dependencies]
const_fn_assert = "^0.1.2"
static_assertions = "^1.1"

[target.'cfg(target_os = "linux")'.dependencies]
clap = "^2.33.1"
context-allocator = { path = "../context-allocator", version = "^0.3.0" }
likely = { version = "^0.2.0", path = "../likely" }
linux-io-uring = { path = "../linux-io-uring", version = "^0.0.2" }
linux-support = { version = "^0.0.2", path = "../linux-support" }
magic-ring-buffer = { path = "../magic-ring-buffer", version = "^0.2.0" }
message-dispatch = { path = "../message-dispatch", version = "^0.2.0" }
maplit = "^1.0.2"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = "^1.0.55"
socket-access-control = { path = "../socket-access-control", version = "^0.0.0" }
swiss-army-knife = { version = "0.0.1", path = "../swiss-army-knife" }
terminate = { path = "../terminate", version = "^0.2.0" }
