# This file is part of linux-support. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT. No part of linux-support, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2020 The developers of linux-support. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT.


[package]
name = "linux-io-uring-main"
description = "Comprehensive Linux support for io-uring (sample main program)"
keywords = []
categories = []
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael@dialogx.com>"]
homepage = "https://github.com/lemonrock/linux-support"
repository = "https://github.com/lemonrock/linux-support.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
edition = "2018"
version = "0.0.3"

[dependencies]
static_assertions = "^1.1"

[target.'cfg(all(target_os = "linux", target_pointer_width = "64"))'.dependencies]
clap = "^2.33.1"
const_fn_assert = "^0.1.2"
context-allocator = { version = "^0.3.1", path = "../context-allocator" }
likely = { version = "^0.2.0", path = "../likely" }
linux-io-uring = { version = "^0.0.3", path = "../linux-io-uring" }
linux-support = { version = "^0.0.26", path = "../linux-support" }
magic-ring-buffer = { version = "^0.3.1", path = "../magic-ring-buffer" }
message-dispatch = { version = "^0.2.0", path = "../message-dispatch" }
maplit = "^1.0.2"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = "^1.0.55"
socket-access-control = { version = "^0.0.0", path = "../socket-access-control" }
swiss-army-knife = { version = "^0.0.24", path = "../swiss-army-knife" }
terminate = { version = "^0.2.1", path = "../terminate"  }
