# This file is part of linux-support. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT. No part of linux-support, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2020 The developers of linux-support. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT.


[package]
name = "linux-io-uring"
description = "Comprehensive Linux support for io-uring"
keywords = ["linux", "namespaces", "sysfs", "pci", "numa"]
categories = ["external-ffi-bindings", "filesystem", "hardware-support", "os::unix-apis"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael@dialogx.com>"]
homepage = "https://github.com/lemonrock/linux-support"
repository = "https://github.com/lemonrock/linux-support.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
edition = "2018"
version = "0.0.3"

[build-dependencies]
indexmap = { version = "^1.5.0", features = [] }
maplit = "^1.0.2"

[dependencies]
static_assertions = "^1.1"

[target.'cfg(all(target_os = "linux", target_pointer_width = "64"))'.dependencies]
arrayvec = { version = "^0.7.0", features = ["std", "serde"] }
const_fn_assert = "^0.1.2"
context-allocator = { version = "^0.3.1", path = "../context-allocator" }
context-coroutine = { version = "^3.2.1", path = "../context-coroutine" }
either = { version = "^1.5.3", features = ["serde"] }
indexmap = { version = "^1.5.0", features = ["serde-1"] }
lazy_static = "^1.4.0"
libc = { version = "^0.2.93", features = ["const-extern-fn", "extra_traits", "std"] }
likely = { version = "^0.1.0" }
linux-support = { version = "^0.0.26", path = "../linux-support" }
magic-ring-buffer = { version = "^0.3.1", path = "../magic-ring-buffer" }
memchr = "^2.3.3"
message-dispatch = { version = "^0.2.0", path = "../message-dispatch" }
message-dispatch-datadog = { version = "^0.2.0", path = "../message-dispatch-datadog" }
phf = { version = "^0.8.0", features = ["macros"] }
phf_macros = { version = "^0.8.0" }
serde = { version = "^1.0", features = ["derive", "rc"] }
socket-access-control = { version = "^0.0.0", path = "../socket-access-control" }
strum = "^0.19.2"
strum_macros = "^0.19.2"
swiss-army-knife = { version = "^0.0.30", path = "../swiss-army-knife" }
terminate = { version = "^0.2.1", path = "../terminate" }
uriparse = "^0.6.3"
