# This file is part of linux-support. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT. No part of linux-support, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2020 The developers of linux-support. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT.


[package]
name = "linux-support-clone"
description = "linux process clone support logic"
keywords = ["linux", "wrapper", "process", "clone"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/linux-support"
repository = "https://github.com/lemonrock/linux-support.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
edition = '2018'
version = "0.0.0"

[dependencies]
static_assertions = "^1.0"

[target.'cfg(target_os = "linux")'.dependencies]
bitflags = "^1.0"
errno = "^0.2"
file-descriptors = "^0.9.1"
libc = "^0.2"
likely = "^0.1"
linux-support = { version = "0.0.0", path = "../linux-support" }
serde = { version = "1.0", features = ["derive"] }
