# This file is part of linux-support. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT. No part of linux-support, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2020 The developers of linux-support. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT.


[package]
name = "linux-support"
description = "Comprehensive Linux support for namespaces, cgroups, processes, scheduling, parsing /proc, parsing /sys, signals, hyper threads, CPUS, NUMA nodes, unusual file descriptors, PCI devices and much, much more"
keywords = ["linux", "namespaces", "sysfs", "pci", "numa"]
categories = ["external-ffi-bindings", "filesystem", "hardware-support", "os::unix-apis"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/linux-support"
repository = "https://github.com/lemonrock/linux-support.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
edition = '2018'
version = "0.0.2"

[dependencies]
const_fn_assert = "^0.1.2"
static_assertions = "^1.1"

[features]
default = []
libseccomp = []

[target.'cfg(target_os = "linux")'.dependencies]
arrayvec = { version = "^0.5.1", features = ["array-sizes-33-128", "array-sizes-129-255", "serde"] }
bitflags = "^1.0"
bit-vec = "^0.6.1"
chrono = { version = "^0.4.11", features = ["serde"] }
either = { version = "^1.5.3", features = ["serde"] }
errno = "^0.2"
lazy_static = "^1.4.0"
libc = { version = "^0.2.69", features = ["const-extern-fn", "extra_traits", "std"] }
libc-extra = "^0.3.2"
likely = "^0.1"
indexmap = { version = "^1.3.2", features = ["serde-1"] }
maplit = "^1.0.2"
memchr = "^2.1.2"
memoffset = { version = "0.5", features = ["unstable_const"] }
raw-cpuid = "^5.0"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_bytes = "^0.11.3"
streaming-iterator = "^0.1.5"
strum = "^0.18.0"
strum_macros = "^0.18.0"
terminate = { version = "^0.2.0", path = "../terminate" }
