# This file is part of linux-support. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT. No part of linux-support, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2020 The developers of linux-support. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT.


[package]
name = "socket-access-control"
description = "Internet Protocol Address Access Control"
keywords = ["network", "internet", "protocol", "IPv4", "IPv6"]
categories = ["network-programming"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/linux-support"
repository = "https://github.com/lemonrock/linux-support.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
edition = "2018"
version = "0.0.0"

[dependencies]
const_fn_assert = "^0.1.2"
static_assertions = "^1.1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-support = { version = "^0.0.15", path = "../linux-support" }
strum = "^0.19.2"
strum_macros = "^0.19.2"
swiss-army-knife = { version = "^0.0.14", path = "../swiss-army-knife" }
