# This file is part of linux-support. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT. No part of linux-support, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2020 The developers of linux-support. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-support/master/COPYRIGHT.


[package]
name = "swiss-army-knife"
description = "Common utility code to support linux-support and other projects"
keywords = ["utilities", "utils", "miscellaneous", "miscellany"]
categories = ["rust-patterns"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/linux-support"
repository = "https://github.com/lemonrock/linux-support.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
edition = "2018"
version = "0.0.9"

[dependencies]
static_assertions = "^1.1"
arrayvec = { version = "^0.5.1", features = ["array-sizes-33-128", "array-sizes-129-255", "serde"] }
hashbrown = { version = "^0.9.1", features = ["nightly", "serde", "raw", "inline-more", "ahash", "ahash-compile-time-rng" ] }
libc = { version = "^0.2.69", features = ["const-extern-fn", "extra_traits", "std"] }
likely = { version = "^0.2.0", path = "../likely" }
memchr = "^2.3.3"
serde = { version = "^1.0", features = ["derive", "rc"] }
