[package]
name = "const-cstr-fork"
version = "0.2.2"
authors = ["Austin Bonander <austin.bonander@gmail.com>", "Raphael Cohn <raphael.cohn@stormmq.com"]
description = "Create static C-compatible strings from Rust string literals. Fork of https://github.com/abonander/const-cstr"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lemonrock/const-cstr-fork"

[dependencies]
libc = "^0.2"
